# EdXposed

./: .gitignore  README.md  build.gradle  build.sh  settings.gradle
Bridge/: build.gradle  proguard-rules.pro
Bridge/src/main/: AndroidManifest.xml
Bridge/src/main/java/android/content/res/: XModuleResources.java  XResources.java
Bridge/src/main/java/com/zhenl/riru/common/: KeepAll.java  KeepMembers.java
Bridge/src/main/java/com/zhenl/riru/xposed/: Main.java
Bridge/src/main/java/de/robv/android/xposed/: IXposedHookInitPackageResources.java  SELinuxHelper.java  VMHelper.java  WhaleRuntime.java  XposedBridge.java  XposedHelpers.java  XposedInit.java
Bridge/src/main/whale/: CMakeLists.txt
Bridge/src/main/whale/src/android/art/: art_runtime.cc  art_runtime.h  native_on_load.cc
Bridge/src/main/whale/src/platform/linux/: process_map.cc
Core/: .gitignore  build-module.sh  build.gradle  module.gradle
Core/jni/: CMakeLists.txt
Core/jni/main/: Android.mk  CMakeLists.txt  main.cpp
Core/jni/main/include/: config.h  dobby.h  fd_utils-inl.h
Core/jni/main/include/art/: oat_file_manager.h
Core/jni/main/include/base/: object.h
Core/jni/main/inject/: config_manager.cpp
Core/jni/main/java_hook/: java_hook.cpp
Core/jni/main/native_hook/: native_hook.cpp  native_hook.h
Core/src/main/: AndroidManifest.xml
Core/template_override/: config.sh  customize.sh  module.prop  post-fs-data.sh  riru_module.prop  sepolicy.rule
Core/template_override/common/: post-fs-data.sh
Core/template_override/system/framework/: edconfig.dex
(+31 files in other folders)
